# vim-package-info

./: .gitignore  README.md  jsconfig.json  package-lock.json  package.json
.github/workflows/: ci.yml
rplugin/node/vim-package-info/: diff.js  index.js  more.js  render-utils.js  render.js  render_utils.js  store.js  types.d.ts  utils.js
rplugin/node/vim-package-info/parsers/: cargo-toml.js  cargo.js  package-json.js  pipfile.js  pyproject-toml.js  requirements-txt.js
test/: diff.test.js  file_test.js  options.js  package-json.test.js  package-json_test.js  setup.js  test.js
tests/: diff.test.js  parser-package-json.test.js  pkg-json.test.js  types.d.ts
tests/fixtures/javascript/npm/: package-lock.json
tests/fixtures/javascript/npm-workspace/: package-lock.json
tests/fixtures/javascript/pnpm/: pnpm-lock.yaml
tests/fixtures/javascript/pnpm-workspace/: pnpm-lock.yaml
tests/fixtures/javascript/yarn/: package.json
tests/fixtures/javascript/yarn-workspace/: package.json
tests/fixtures/python/pyproject/: pyproject.toml
tests/fixtures/python/requirements/: requirements.txt
tests/lib/: lifecycle.js  utils.js
tests/parser-tests/: cargo-toml.test.js  pipfile.test.js  pkg-json.test.js  pyproject-toml.test.js  requirements-txt.test.js
